<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>nl.aurorion.blockregen</groupId>
    <artifactId>BlockRegen</artifactId>
    <version>3.16.2-SNAPSHOT</version>
    <modules>
        <module>blockregen-version</module>
        <module>blockregen-common</module>
        <module>blockregen-plugin</module>
        <module>blockregen-legacy</module>
        <module>blockregen-ancient</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.source>8</maven.compiler.source>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.8.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>set</goal>
                        </goals>
                        <configuration>
                            <groupId>nl.aurorion.blockregen</groupId>
                            <artifactId>BlockRegen</artifactId>
                            <processAllModules>true</processAllModules>
                            <processProject>true</processProject>
                            <oldVersion>${project.version}</oldVersion>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- MMOItems -->
        <repository>
            <id>phoenix</id>
            <url>https://nexus.phoenixdevt.fr/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Vault -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- Official XSeries release -->
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>11.2.0.1</version>
            <scope>compile</scope>
        </dependency>
        <!-- Oraxen support -->
        <dependency>
            <groupId>io.th0rgal</groupId>
            <artifactId>oraxen</artifactId>
            <version>1.180.0</version>
            <exclusions>
                <exclusion>
                    <groupId>me.gabytm.util</groupId>
                    <artifactId>actions-spigot</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.jetbrains</groupId>
                    <artifactId>annotations</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.ticxo</groupId>
                    <artifactId>PlayerAnimator</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.github.stefvanschie.inventoryframework</groupId>
                    <artifactId>IF</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.th0rgal</groupId>
                    <artifactId>protectionlib</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>dev.triumphteam</groupId>
                    <artifactId>triumph-gui</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.bstats</groupId>
                    <artifactId>bstats-bukkit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.jeff-media</groupId>
                    <artifactId>custom-block-data</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.jeff-media</groupId>
                    <artifactId>persistent-data-serializer</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.jeff_media</groupId>
                    <artifactId>MorePersistentDataTypes</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>gs.mclo</groupId>
                    <artifactId>java</artifactId>
                </exclusion>
            </exclusions>
            <scope>provided</scope>
        </dependency>
        <!-- MMOItems -->
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>MythicLib-dist</artifactId>
            <version>1.6.2-SNAPSHOT</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>net.Indyuce</groupId>
            <artifactId>MMOItems-API</artifactId>
            <version>6.9.5-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- ItemsAdder -->
        <dependency>
            <groupId>com.github.LoneDev6</groupId>
            <artifactId>api-itemsadder</artifactId>
            <version>3.6.1</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>